--- a/src/pages/home/ui/mainInfo/MainInfo.module.css
+++ b/src/pages/home/ui/mainInfo/MainInfo.module.css
@@ -1,6 +1,6 @@
 .mainDiv{
     background-image: url('/src/assets/mainBg.svg');
     background-repeat: no-repeat;
-    background-size: contain;
-    @apply flex flex-col items-center h-screen mx-[8%] items-center;
+    background-size:cover;
+    @apply flex flex-col items-center m-10 rounded-[20px] h-screen;
 }
